<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/filter_text_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/msg_begin_date"
            android:textColor="@color/colorLightGrey"
            android:gravity="center"
            android:layout_marginRight="@dimen/filter_text_margin"
            android:layout_marginEnd="@dimen/filter_text_margin"/>
        <EditText
            android:id="@+id/etDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_sort_order"
            android:textColor="@color/colorLightGrey"
            android:gravity="center"
            android:layout_marginRight="@dimen/filter_text_margin"
            android:layout_marginEnd="@dimen/filter_text_margin"/>

        <Spinner
            android:id="@+id/spinnerSortOrder"
            android:layout_width="match_parent"
            android:entries="@array/sort_order"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#999696"
            android:text="@string/msg_news_deck_nvalues"
            android:layout_marginRight="@dimen/filter_text_margin"
            android:layout_marginEnd="@dimen/filter_text_margin"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <CheckBox android:id="@+id/checkboxArts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts" />
            <CheckBox android:id="@+id/checkboxFashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion_amp_style" />
            <CheckBox android:id="@+id/checkboxSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_margin="8dp"
        android:text="@string/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:layout_gravity="center" />

</LinearLayout>